# Nintendo-Switch-Windows-Control

./: .gitignore  README.md
.github/workflows/: build-clients.yml  build-linux.yml  build-mac.yml  build-mobile.yml  build-pi.yml  build-release.yml  build-server.yml  build-windows.yml  build.yml  clean-actions.yml
backend/rpi/: setup_gadget.sh
backend/rpi/include/: protocol.hpp
backend/rpi/src/backend/: main.cpp
client/: CMakeLists.txt  ns-client.cpp
client/linux/: build_gui.sh  ns-gamepad.cpp  ns-gui.cpp
client/mac/: build_gui.sh  ns-gamepad.mm  ns-gui.mm
client/mobile/android/app/: build.gradle.kts  proguard-rules.pro
client/mobile/android/app/src/main/: AndroidManifest.xml
client/mobile/android/app/src/main/java/com/nscontrol/: MainActivity.kt
client/mobile/android/app/src/main/res/drawable/: input_bg.xml
client/mobile/android/app/src/main/res/layout/: connect.xml
client/mobile/android/app/src/main/res/values/: themes.xml
client/mobile/ios/NSControl/: BridgeManager.swift  Info.plist  NSControlApp.swift  ProtocolBridge.h
client/mobile/ios/NSControl/Assets.xcassets/AppIcon.appiconset/: Contents.json
client/mobile/ios/NSControl/Assets.xcassets/AppLogo.imageset/: Contents.json
client/windows/: build.bat  ns-gamepad.cpp  ns-gui.cpp
docs/: architecture.md  building-from-source.md  controller-modes.md  macros.md  raspberry-pi-setup.md  vision.md  wakeup.md  web-app.md
docs/website/: index.html
frontend/linux/: ns-gamepad.cpp  sha256.h
frontend/mac/: ns-gamepad.mm
frontend/windows/: ns-gamepad.cpp
mobile/android/: gradlew  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/assets/: ns_mobile
mobile/android/app/src/main/cpp/: CMakeLists.txt  ns_protocol_jni.cpp  sdl_controller_jni.cpp
mobile/android/app/src/main/java/com/nscontrol/: MainActivity.kt  Protocol.kt  SDLController.kt
mobile/android/app/src/main/res/layout/: connect.xml
mobile/android/app/src/main/res/values/: themes.xml
mobile/ios/: project.yml
mobile/ios/NSControl/: BridgeManager.swift  Info.plist  NSControlApp.swift  ProtocolBridge.h  SDLControllerBridge.swift
mobile/ios/NSControl/WebApp/: index.html  mobile.html
mobile/ios/NSMobile/: Info.plist  ViewController.swift
mobile/ios/NSMobile.xcodeproj/: project.pbxproj
mobile/shared/: ns_protocol.c  ns_protocol.h  sdl_controller.c  sdl_controller.h
mobile/shared/include/: ns_protocol.h
mobile/shared/webapp/: index.html  mobile.html
server/: CMakeLists.txt  main.cpp
server/include/: protocol.hpp
server/rpi/: CMakeLists.txt  setup_gadget.sh
server/rpi/include/: protocol.hpp
server/rpi/src/backend/: hori-main.cpp  main.cpp  pro-main.cpp
server/rpi/src/pro-controller-testing/: setup_probe.sh  test_probe.cpp
webapp/: editor.html  index.html  mobile.html
